Implemented homepage, wishlist page, prod info page

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>College Bazaar</title>
   </head>
+  <style>
+    body{
+      background-color: #f4f3ee;
+    }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
